* Made AA Guns appear in battle, then disappear after firing if they could not participate any further. (veqryn)
* Fixed bug causing stacked aa guns to all fire with the attack power of the most powerful aa gun in the group. (veqryn)

* Fixed some math bugs in low luck picking of aa casualties for maps with non-standard aa guns. (veqryn)

git-svn-id: https://svn.code.sf.net/p/triplea/code/trunk/triplea@3714 a4c711aa-641f-0410-879d-9b464e52b682